------------------------------------------------------------------------
r1372 | gaser | 2018-10-15 07:58:13

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_tools.m
M       html/cat.html

Changed: Default interpolation for applying deformations is now trilinear to 
prevent negative values due to spline interpolation for segmented images.
------------------------------------------------------------------------
r1371 | gaser | 2018-10-04 11:21:11 +0200 (Do, 04 Okt 2018) | 67 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
MM      cat_conf_ROI.m
M       cat_conf_extopts.m
M       cat_defaults.m
MM      cat_io_findjobj.m
MM      cat_io_rmdir.m
MM      cat_main_LAS2.m
MM      cat_main_registration2.m
M       cat_stat_analyze_ROIs.m
M       cat_surf_resamp.m
M       html/cat.html
 M      html/cat_tools_checkcov.html
 M      html/cat_tools_checkcov_exclusion.html
 M      html/icons/file_cat_log.png
 M      html/icons/file_cat_report.png
 M      html/icons/file_cat_report_surf.png
 M      html/icons/file_cat_xml.png
 M      html/icons/file_delete.png
 M      html/icons/file_delete_restore.png
 M      html/icons/file_export.png
 M      html/icons/file_new.png
 M      html/icons/file_open.png
 M      html/icons/file_pdf.png
 M      html/icons/file_print.png
 M      html/icons/file_save.png
 M      html/icons/file_search.png
 M      html/icons/file_spm_view.png
 M      html/icons/file_surf.png
 M      html/icons/file_surfc.png
 M      html/icons/redo.png
 M      html/icons/refresh.png
 M      html/icons/settings.png
 M      html/icons/status_failed.png
 M      html/icons/status_forbiden.png
 M      html/icons/status_help.png
 M      html/icons/status_help2.png
 M      html/icons/status_info.png
 M      html/icons/status_passed.png
 M      html/icons/status_warning_hard.png
 M      html/icons/status_warning_soft.png
 M      html/icons/tool_data_cursor.png
 M      html/icons/tool_fit.png
 M      html/icons/tool_hand.png